# chessStockfish

./: .gitignore  CMakeLists.txt  README.md  testCommand-description.md
source/: chess.hpp  defines.hpp  main.cpp  main_stock.cpp  moveValidator.cpp  moveValidator.hpp  stockHandle.hpp  utils.cpp  utils.hpp
